--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ jQuery(document).ready(function($) {
         from: 0,
         size: 10
     },
-    // "linechart_field"  : "pub_year",
+    "linechart_field"  : "pub_date",
     "dendrogram_field" : "authors", 
     "display_images" : false,
     "result_display" : [
