limit facet size and hide empty facets.  work on sort.

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@ jQuery(document).ready(function($) {
         {"field":"flash_t_md", "display":"Flash Fired"},
         {"field":"scenetype_t_md", "display":"Scene Type"},
         {"field":"lightsource_t_md", "display":"Light Source"},
-        {"field":"geo:lat_d_md", "display":"Latitude"},
-        {"field":"geo:long_d_md", "display":"Longitude"},
+        {"field":"location_geos", "display":"Location (Lat/Lon)"},
+        {"field":"location_latlons", "display":"Location (Lat/Lon) str"},
         // {"field":"content", "display":"Content"},
-        {"field":"date/time_t_md", "display":"Date/Time"}
+        {"field":"dates", "display":"Date/Time", "hidden": "true", "type": "range"}
     ],
     "linechart_field"  : "date/time_t_md",
     "display_images" : true,
