--- a/ads.html
+++ b/ads.html
@@ -16,7 +16,6 @@
 
 
   <link rel="stylesheet" href="css/facetview.css">
-
   <link rel="stylesheet" href="css/style.css">
 
   <!-- Load c3.css -->
@@ -26,11 +25,13 @@
   <script src="vendor/d3-3.5.6/d3.min.js" charset="utf-8"></script>
   <script src="vendor/c3-0.4.10/c3.min.js"></script>
 
+  <script type="text/javascript" src="jquery.facetview.js"></script>
+
   <script type="text/javascript">
 function getParameterByName(name) {
     name = name.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
     var regex = new RegExp("[\\?&]" + name + "=([^&#]*)"),
-        results = regex.exec(location.search);
+        results = regex.exec(decodeURIComponent(location.search));
     return results === null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
 }
 
@@ -40,7 +41,7 @@ function drawPage(nav_page) {
 
   var query = getParameterByName('query');
   var paging = getParameterByName('paging')
-  paging = $.parseJSON();
+  paging = $.parseJSON(paging);
   if (!paging)
   {
       paging = {"from": 0, "size": 10};
@@ -51,9 +52,34 @@ function drawPage(nav_page) {
   if (!paging.size) {
       paging['size'] = 10;
   }
+
+  var facets = getParameterByName('facets')
+  facets = $.parseJSON(facets);
+
+  // Initial default set of facets.  URL parameters can redefine/refine this.
+  if (!facets) {
+    facets = [
+          {"field":"persons", "display":"Persons"},
+          {"field":"phonenumbers", "display":"Phone Numbers"},
+          //{"field":"keywords", "display":"Keywords"},
+          {"field":"weaponnames", "display":"Weapon Names"},
+          {"field":"weapontypes", "display":"Weapon Types"},
+          {"field":"ner_money_ts_md", "display":"Weapon Cost"},
+          {"field":"host", "display":"Weapon Website"},
+          {"field":"locations", "display":"Locations"},
+          {"field":"organizations", "display":"Organizations"},
+          //{"field":"age", "display":"Age"},
+          {"field":"dates", "display":"Dates"},
+          //{"field":"image_links", "display":"Image Links"},
+      ]
+  }
+  var active_facets = getParameterByName('active_facets')
+  active_facets = $.parseJSON(active_facets);
+
+  if (!active_facets) active_facets = {};
+
   $('.facet-view-simple').empty();
   $('.facet-view-simple').facetview({
-      // "config_file": "http://imagecat.dyndns.org/atf/facetview/atf_images_cfg.json"
     "search_url": "http://imagecat.dyndns.org:8983/solr/imagecatdev/select?",
     "search_index": "solr",
     "text_limit": 512,
@@ -61,20 +87,8 @@ function drawPage(nav_page) {
     "paging": paging,
     "q" : query,
     "nav_page": nav_page,
-    "facets": [
-        {"field":"persons", "display":"Persons"},
-        {"field":"phonenumbers", "display":"Phone Numbers"},
-        //{"field":"keywords", "display":"Keywords"},
-        {"field":"weaponnames", "display":"Weapon Names"},
-        {"field":"weapontypes", "display":"Weapon Types"},
-        {"field":"ner_money_ts_md", "display":"Weapon Cost"},
-        {"field":"host", "display":"Weapon Website"},
-        {"field":"locations", "display":"Locations"},
-        {"field":"organizations", "display":"Organizations"},
-        //{"field":"age", "display":"Age"},
-        {"field":"dates", "display":"Dates"},
-        //{"field":"image_links", "display":"Image Links"},
-    ],
+    "facets": facets,
+    "active_facets": active_facets,
     "display_images" : true,
     "fields": ["title", "content", "persons", "weaponnames", "weapontypes",
                "ner_money_ts_md", "host", "locations", "organizations", "url"],
@@ -139,13 +153,15 @@ function drawPage(nav_page) {
     "linkify" : true
 
     });
-$('.facetview_filtershow' ).trigger( "click" );
+// Automatically expands all facets with any contents
+//$('.facetview_filtershow' ).trigger( "click" );
 };
 
 jQuery(document).ready(function($) {
    drawPage();
 });
 
+// Properly handles back/forward browser buttons
 window.onpopstate = function(state, title, url) {
     drawPage(true);
 };
@@ -182,5 +198,4 @@ window.onpopstate = function(state, title, url) {
 
 </div>
 </body>
-<script type="text/javascript" src="jquery.facetview.js"></script>
 </html>
